# Aseprite-Compiler

./: README.md  README2.md  VideoFileServer.py  WebGuiMockup.py  app.py  colordetecter.py  dl.py  gui.py  icontest.py  noguimockup.py  pyproject.toml  requirements.txt  test.py  testclr.py  testlib.py
.github/workflows/: codeql-analysis.yml  codeql.yml
code-archive/1/: README.md  app.py  requirements.txt  requirementss.txt
code-archive/1/util/: __init__.py  _fr_itertools.py  constants.py  dl.py  dl_NOT_WORKING.py  unused_temp_util.py
errors/: NoInternetConnection.py  __init__.py
util/: __init__.py  _dl.py  _fr_itertools.py  constants.py  dl.py  dl_NOT_WORKING.py  errors.py  o.py  prime_numbers.py  scaffolding.py  unused_temp_util.py
util/errors/: InvalidProgressBar.py  NoInternetConnection.py  __init__.py  custom.py
